Add gameplay and screen management features
- Introduced game structure to manage username, time, and score.
- Updated score handling and initialization functions.
- Enhanced message setting to support formatted strings.
- Implemented screen management functions for rendering game state.
- Added printter module for handling screen output.
- Refactored object space initialization and rendering logic.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ set(SOURCES
     logger/logger.c
     src/digitaldisplay.c
     src/message.c
+    src/printter.c
+    src/screen.c
 )
 
 # Header files (for IDE support)
@@ -63,6 +65,8 @@ set(HEADERS
     logger/logger.h
     include/digitaldisplay.h
     include/message.h
+    include/printter.h
+    include/screen.h
 )
 
 # Create executable
