- Implemented menu screen for handling menu - Added printter function to print string with style - Added SPACE_BAR, ENTER_KEY registers for keyboard - Added refresh for menu in `screen.h`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCES
     src/message.c
     src/printter.c
     src/screen.c
+    src/gmenu.c
 )
 
 # Header files (for IDE support)
@@ -67,6 +68,7 @@ set(HEADERS
     include/message.h
     include/printter.h
     include/screen.h
+    include/gmenu.h
 )
 
 # Create executable
